--- a/3DCGLib/3DCGLib.vcxproj.filters
+++ b/3DCGLib/3DCGLib.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Model.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="MyMath.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Window.h">
